--- a/TreeSpotter/war/TreeSpotter.css
+++ b/TreeSpotter/war/TreeSpotter.css
@@ -1,34 +1,180 @@
-/** Add css rules here for your application. */
-
-
-/** Example rules used by the template application (remove for your app) */
-h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+body {
+	position: 	absolute;
+	height:		100%;
+	width:		100%;
+	margin: 	0px 0px 0px 0px;
+	background-color: #dbeadc;
 }
 
-.sendButton {
-  display: block;
-  font-size: 16pt;
+header{
+	position: relative;
+	margin-top: 20px;
+	margin-left: auto;
+    margin-right: auto;
+    height:	150px;
+    width:	95%;
+	background-image: url('image/treebanner.jpg');
 }
 
-/** Most GWT widgets already have a style name defined */
-.gwt-DialogBox {
-  width: 400px;
+#button-bar {
+	position: relative;
+	width: 95%;
+	margin: 0 auto 0 auto;
+	border: 0px solid #DEDCDD;
+	background-color: #DEDCDD;
 }
 
-.dialogVPanel {
-  margin: 5px;
+.nav-button {
+  padding: 10px;
+  margin:	10px;
+  background: #08C;
+  border: thin solid #08C;
+  width: 30%;
+
+  /* Font styles */
+  color: white;
+  text-decoration: none;
 }
 
-.serverResponseLabelError {
-  color: red;
+#main {
+	display: table;
+    width:	95%;
+    min-height: 500px;
+	max-height: 900px;
+	border: thin solid #DEDCDD;
+	background-color: white;	
+	margin-left: auto;
+	margin-right: auto;
 }
 
-/** Set ids using widget.getElement().setId("idOfElement") */
-#closeButton {
-  margin: 15px 6px 6px;
+#right-side {
+	display: table-cell;
+	width:	20%;
+	margin-top: 0;
+    height: 900px;
+	background-color: #DEDCDD;	
+	float: right;
+	text-align: center;
 }
+
+#right-side p {
+	display: block;
+	font: 18px Garamond;
+	margin: 10px;
+}
+
+#right-side img {
+	margin: 20px;
+}
+
+#right-side button {
+	background:#25A6E1;
+	background:-moz-linear-gradient(top,#25A6E1 0%,#188BC0 100%);
+	padding:4px 8px;
+	color:#fff;
+	font-family:'Helvetica Neue',sans-serif;
+	font-size:14px;
+	border-radius:4px;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border:1px solid #1A87B9
+}
+
+#content {
+	display: block;
+}
+
+#left-side {
+	display: table-cell;
+	float: left;
+	width: 80%;
+}
+
+#main-search {
+	display: block;
+	padding: 10px 100px 10px 100px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+input.main-search {
+	display: inline-block;
+	padding: 5px;
+	border: 2px solid #F1B720;
+	border-radius: 1px;
+	color: #333;
+	width: 500px;
+	height: 20px;
+	margin: 10px;
+}
+
+button.main-search {
+	padding: 10px;
+  	background: #08B;
+  	border: 3px solid #5CC9ED;
+  	border-radius: 4px;
+  	margin: 10px;
+
+  	/* Font styles */
+  	color: white;
+  	text-decoration: none;
+}
+
+a.main-search {
+	position: absolute;
+	margin-left: 500px;
+}
+
+.main-search table {
+	margin-left: 50px;
+}
+
+.disabled {
+	background-color: #DEDEDE;
+	border: thin solid black;
+	padding: 5px;
+	width: 150px;
+	opactiy: 0.5;
+}
+
+.enabled {
+	border: 2px solid #F1B720;
+	padding: 5px;
+	width: 150px;
+}
+
+.advanced-search {
+	margin: 5px;
+	width: 100px;
+}
+
+.result {
+	border-bottom: thin black dashed;
+	padding: 20px;
+	width: 80%;
+	height: 50px;
+	margin-left: 5%;
+}
+
+.result:hover {
+	background-color: #F0FAF5;
+}
+
+.map {
+	background-color: green;
+}
+
+table.treedata{
+	padding: 20px;
+	height: 30px;
+	width: 100%;
+}
+
+.add-popup {
+	z-index: 99999;
+	background-color: white;
+	border: thin solid black;
+	border-radius: 3px;
+	padding: 20px;
+}
+
