--- a/TreeSpotter/war/TreeSpotter.css
+++ b/TreeSpotter/war/TreeSpotter.css
@@ -7,6 +7,38 @@ body {
 	font-family:'Helvetica Neue',sans-serif;
 }
 
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+#top {
+	display: block;
+	position: relative;
+	top: 0;
+	height: 30px;
+	background-color: black;
+	opacity: 0.7;
+	padding-left: 10px;
+	padding-right: 10px;
+	
+	text-align: right;
+	color: white;
+}
+
+#admin-button {
+	border: thin white solid;
+	float: right;
+	padding: 5px;
+}
+
+#add-tree-button {
+	float: left;
+}
+
 header{
 	display: block;
 	position: relative;
@@ -57,62 +89,21 @@ header{
 	background-color: white;	
 	margin-left: auto;
 	margin-right: auto;
-}
-
-#right-side {
-	display: table-cell;
-	width:	20%;
-	top: 0;
-	right: 0;
-    height: 900px;
-	background-color: #DEDCDD;	
-	float: right;
-	text-align: center;
-}
-
-#right-side p {
-	display: block;
-	font-size: 18px;
-	margin: 10px;
-	line-height: 25px;
-}
-
-#right-side img {
-	margin: 20px;
-}
-
-#right-side button {
-	background:#25A6E1;
-	background:-moz-linear-gradient(top,#25A6E1 0%,#188BC0 100%);
-	padding:4px 8px;
-	color:#fff;
-	font-family:'Helvetica Neue',sans-serif;
-	font-size:14px;
-	border-radius:4px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border:1px solid #1A87B9
+	padding-bottom: 50px;
 }
 
 #content {
-	width: 95%;
-	padding: 20px;
+	min-height: 500px;
+	padding: 20px 40px 0 40px;
 }
 
-#left-side {
-	display: table-cell;
-	width: 80%;
-	float: left;
-}
-
-#main-search {
-	padding: 10px 100px 10px;
-	margin-left: auto;
-	margin-right: auto;
+.main-search-box{
+	margin: 20px auto 0 auto;
 }
 
 input.main-search {
 	display: inline-block;
+	width: 600px;
 	padding: 5px;
 	border: 2px solid #F1B720;
 	border-radius: 1px;
@@ -133,9 +124,12 @@ button.main-search {
   	text-decoration: none;
 }
 
+.main-search-fields {
+	margin-left: 280px;
+}
+
 a.main-search {
-	position: absolute;
-	margin-left: 500px;
+	margin-left: 800px;
 }
 
 .main-search table {
@@ -182,8 +176,6 @@ a.main-search {
 }
 
 .treedata {
-	float: right;
-	margin-right: 5%;
 	padding: 20px;
 }
 
@@ -191,11 +183,6 @@ a.main-search {
 	font-weight: bold;
 	height: 20px;
 }
-
-.info-value {
-		
-}
-
 .add-popup {
 	z-index: 99999;
 	background-color: white;
@@ -213,6 +200,11 @@ a.main-search {
 
 .add-popup input:focus {
 	background-color: #F0FAF5;
+}
+
+.results-map {
+	float: left;
+	margin: 30px 5px;
 }
 
 .gwt-TabBarItem {
