--- a/TreeSpotter/war/TreeSpotter.css
+++ b/TreeSpotter/war/TreeSpotter.css
@@ -19,7 +19,7 @@ a:hover {
 	display: block;
 	position: relative;
 	top: 0;
-	height: 30px;
+	height: 40px;
 	background-color: black;
 	opacity: 0.7;
 	padding-left: 10px;
@@ -29,14 +29,33 @@ a:hover {
 	color: white;
 }
 
+#top a {
+	color: red;
+	font-size: 14px;
+	display: inline-block;
+	margin-top: 10px;
+}
+
 #admin-button {
-	border: thin white solid;
-	float: right;
-	padding: 5px;
+	border: 0px white solid;
+	float: left;
+	padding: 10px;
+	background: none;
+	color: blueviolet;
+	font-size: 14px;
 }
 
 #add-tree-button {
 	float: left;
+	height: 30px;
+	border: 1px solid gainsboro;
+	border-radius: 3px;
+	background-color: firebrick;
+	color: blanchedalmond;
+	margin: 5px;
+	font-size: 16px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 header{
@@ -130,6 +149,7 @@ button.main-search {
 
 a.main-search {
 	margin-left: 800px;
+	font-size: 14px;
 }
 
 .main-search table {
