--- a/TreeSpotter/war/TreeSpotter.css
+++ b/TreeSpotter/war/TreeSpotter.css
@@ -50,7 +50,7 @@ a:hover {
 	height: 30px;
 	border: 1px solid gainsboro;
 	border-radius: 3px;
-	background-color: firebrick;
+	background-color: cadetblue;
 	color: blanchedalmond;
 	margin: 5px;
 	font-size: 16px;
@@ -258,3 +258,12 @@ a.main-search {
 	background-color: #EEEEEE;	
 }
 
+.tooltip {
+	padding: 10px;
+	background-color: 	#CDD7B6;
+	opacity: 0.95;
+	border-radius: 4px;
+	box-shadow: 0 0 5px 2px rgba(0,0,0,.35);
+	max-width: 400px;
+	z-index: 9999999;
+}
