--- a/TreeSpotter/war/TreeSpotter.css
+++ b/TreeSpotter/war/TreeSpotter.css
@@ -325,6 +325,25 @@ a.main-search:hover {
 	border-radius: 4px;
 	box-shadow: 0 0 5px 2px rgba(0,0,0,.35);
 	max-width: 400px;
-	z-index: 9999999;
+	z-index: 1;
 	font-size: 14px;
+}
+
+/* FLAG POPUP */
+.flag-popup {
+	background-color: white;
+	padding: 20px 20px 10px;
+	border: thick solid black;
+	z-index: 100;
+}
+
+.flag-popup textarea {
+	display: block;
+	width: 250px;
+	height: 70px;
+}
+
+.flag-popup button {
+	margin-top:	5px;
+	margin-right: 20px;
 }
